# jupyter-project

./: .babelrc.json  .eslintignore  .eslintrc.js  .gitignore  .prettierignore  LICENSE  MANIFEST.in  README.md  environment.yml  jest.config.js  jupyter_notebook_config.json  package.json  postBuild  pyproject.toml  release.py  setup.py  tsconfig.build.json  tsconfig.json
.github/: dependabot.yml
.github/workflows/: build.yml  publish.yml
binder/: environment.yml  jupyter_notebook_config.json  postBuild
jupyter-config/: jupyter_project.json
jupyter_project/: __init__.py  _version.py  actionsstack.py  autoinstance.py  config.py  files.py  handlers.py  jinja2.py  project.py  traits.py
jupyter_project/examples/: demo.ipynb  example.ipynb  jupyter_notebook_config.json  train_model.py
jupyter_project/tests/: test_actionsstack.py  test_autoinstance.py  test_config.py  test_file.py  test_project.py  test_settings.py  utils.py
src/: filetemplates.ts  form.tsx  index.ts  jupyter-project.ts  project.ts  statusbar.tsx  style.ts  theme.ts  theme.tsx  tokens.ts  utils.ts  validator.ts
src/__tests__/: project.spec.ts  utils.spec.ts
style/: index.css
