[build-system]
requires = ["jupyter_packaging~=0.4.0", "jupyterlab~=1.2", "setuptools>=40.8.0", "wheel"]
build-backend = "setuptools.build_meta"

[tool.coverage.run]
omit = ["*/tests/*", ]
source = ["jupyter_project", ]

[tool.coverage.report]
exclude_lines = ["pragma: no cover", "noqa", "except ImportError:"]
show_missing = true
